# cmake-practice

./: cmake-01.md  cmake-02.md
t1/: .CMakeLists.txt.swp
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  hello.c  main.c
